namespace java ru.nkz.ivcgzo.thriftDisp

include "../../../common/thrift/kmiacServer.thrift"

//русские буквы
service ThriftDisp extends kmiacServer.KmiacServer {
}
